fix(footer): remove fixed container height causing white overflow on mobile
Ref #3

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -133,8 +133,4 @@
   .footer-links {
     flex-direction: column;
   }
-
-  .footer .container {
-    height: 500px !important;
-  }
 }
